fixed horizontal scroll in my journey and fixed height issues

--- a/src/app/styles/about.css
+++ b/src/app/styles/about.css
@@ -315,8 +315,11 @@
   /* Reduce journey-mode container height */
   .journey-mode .journey-mode-container {
     height: 70vh;
-    overflow-x: scroll;
     width:100%;
+  }
+  .journey-container{
+    overflow-x: scroll !important;
+    transform: none;
   }
   .journey-mode .back-btn {
     top: 0.5rem;
