--- a/src/app/styles/tech-stack.css
+++ b/src/app/styles/tech-stack.css
@@ -1,7 +1,7 @@
 /* General Section Styling */
 #tech-stack {
   text-align: center;
-  padding: 80px 20px;
+  padding: 60px 20px;
   background: white;
   color: black;
 }
@@ -118,7 +118,7 @@
 
 @media (max-width: 480px) {
   #tech-stack {
-      padding: 50px 10px;
+      padding: 35px 10px;
   }
 
   .section-title {
